# manifold

./: .gitignore  Cargo.toml  Dockerfile  ENHANCEMENTS.md  LICENSE  README.md  devenv.nix  docker-compose.yml  test_mcp.sh
demos/: README.md  demo_collab.sh  demo_phase11.sh  demo_phase5.sh  demo_phase6.sh  demo_phase7.sh
docs/: CHAT_SUMMARY.md  COLLABORATION.md  COLLABORATION_IMPLEMENTATION.md  LIST_TOOL.md  PHASE11_SUMMARY.md  README.md  TUI_CONFLICTS.md  TUI_ENHANCEMENTS.md  TUI_QUICK_REFERENCE.md
schemas/: core-v2.json  core.json
src/: lib.rs  main.rs  registry_commands.rs
src/agent/: mod.rs
src/collab/: conflicts.rs  mod.rs  reviews.rs  sync.rs
src/commands/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/export/: mod.rs
src/llm/: mod.rs
src/mcp/: mod.rs  tools.rs
src/models/: mod.rs
src/registry/: mod.rs
src/tui/: mod.rs
src/validation/: mod.rs
src/workflow/: mod.rs
tests/: collaboration_tests.rs  tui_conflict_tests.rs
